# allure-cpp

./: .gitignore  ATTRIBUTION.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  mrdocs.yml
allure-results/: 0589aaa9-8e5e-5b08-71f6-f5c86b4d49ce-result.json  06897bed-4208-7df8-d24a-fe5fddccb017-result.json  09f0cdf3-a76a-f5f8-1842-4388889a09c8-result.json  0bb3f08f-d601-6be8-eea6-3a2be003709d-result.json  224506f9-32ce-0544-d73b-f18c65492177-result.json  2b52c6e3-6c30-beee-58c9-dc7705208625-result.json  477680b2-6d7f-bed8-0103-d5d0f31ffe41-result.json  (+16 more)
examples/: CMakeLists.txt  SampleTests.cpp  allure3config.mjs  main.cpp
examples/CppUTest/: CMakeLists.txt  CalculatorTests.cpp  SampleTests.cpp  main.cpp
examples/GoogleTest/: CMakeLists.txt  CalculatorTests.cpp  SampleTests.cpp  main.cpp
examples/api-comparison/: AllureFeaturesDemo.cpp  CMakeLists.txt  README.md  SampleTests.cpp  main_new_api.cpp  main_old_api.cpp
examples/shared/: Calculator.cpp  Calculator.h
src/: AllureAPI.cpp  AllureAPI.h  CMakeLists.txt  allure-cpp.h
src/API/: Attachment.cpp  Attachment.h  Core.cpp  Core.h  StepFunctions.cpp  StepFunctions.h  StepGuard.cpp  StepGuard.h  TestMetadata.cpp  TestMetadata.h  Utils.h
src/Framework/: FrameworkCapabilities.h  ITestFrameworkAdapter.h  ITestLifecycleListener.h  ITestMetadata.h  ITestStatusProvider.h  TestLifecycleListenerBase.cpp  TestLifecycleListenerBase.h
src/Framework/Adapters/CppUTest/: AllureCppUTest.cpp  AllureCppUTest.h  AllureCppUTestCommandLineTestRunner.cpp  AllureCppUTestCommandLineTestRunner.h  AllureCppUTestOutput.cpp  AllureCppUTestOutput.h  CppUTestAdapter.cpp  CppUTestAdapter.h  CppUTestMetadata.cpp  CppUTestMetadata.h  CppUTestPlugin.cpp  CppUTestPlugin.h  CppUTestStatusProvider.cpp  CppUTestStatusProvider.h
src/Framework/Adapters/GoogleTest/: AllureGTest.cpp  AllureGTest.h  GTestAdapter.cpp  GTestAdapter.h  GTestEventListener.cpp  GTestEventListener.h  GTestMetadata.cpp  GTestMetadata.h  GTestStatusProvider.cpp  GTestStatusProvider.h
src/GTestAllureUtilities/: CMakeLists.txt
src/GTestAllureUtilities/Framework/: FrameworkCapabilities.h  ITestFrameworkAdapter.h  ITestLifecycleListener.h  TestLifecycleListenerBase.cpp  TestLifecycleListenerBase.h
src/GTestAllureUtilities/Framework/Adapters/GoogleTest/: GTestAdapter.cpp  GTestAdapter.h  GTestEventListener.cpp  GTestEventListener.h  GTestMetadata.cpp  GTestMetadata.h  GTestStatusProvider.cpp  GTestStatusProvider.h
src/GTestAllureUtilities/Model/: Action.cpp  Attachment.h  Container.cpp  ExpectedResult.cpp  Label.h  Link.cpp  Parameter.h  Stage.h  Step.cpp  Step.h  TestProgram.h  TestProperty.h  TestSuite.cpp
src/GTestAllureUtilities/Services/: IServicesFactory.h  ServicesFactory.h
src/GTestAllureUtilities/Services/EventHandlers/: ITestCaseEndEventHandler.h  ITestCaseStartEventHandler.h  ITestProgramStartEventHandler.h  ITestStepEndEventHandler.h  ITestStepStartEventHandler.h  ITestSuiteEndEventHandler.h  TestCaseEndEventHandler.cpp  TestCaseStartEventHandler.h  TestProgramEndEventHandler.cpp  TestProgramEndEventHandler.h  TestProgramStartEventHandler.cpp  TestStepEndEventHandler.cpp  TestStepStartEventHandler.cpp  TestSuiteEndEventHandler.cpp  TestSuiteEndEventHandler.h  TestSuiteStartEventHandler.h
src/GTestAllureUtilities/Services/GoogleTest/: GTestEventListener.cpp  GTestEventListener.h  IGTestStatusChecker.h
src/GTestAllureUtilities/Services/Property/: ITestCasePropertySetter.h  TestCasePropertySetter.cpp
src/GTestAllureUtilities/Services/Report/: ContainerJSONSerializer.cpp  ContainerJSONSerializer.h  ITestProgramJSONBuilder.h  ITestSuiteJSONSerializer.h  TestProgramJSONBuilder.h  TestSuiteJSONSerializer.h
src/GTestAllureUtilities/Services/System/: FileService.h  IFileService.h  IUUIDGeneratorService.h  TimeService.cpp
src/Model/: Action.cpp  Action.h  Attachment.cpp  Attachment.h  Container.cpp  Container.h  ExpectedResult.cpp  ExpectedResult.h  Format.h  Label.cpp  Label.h  Link.cpp  Link.h  Parameter.cpp  Parameter.h  Stage.h  Status.h  Step.cpp  Step.h  StepType.h  TestCase.cpp  TestCase.h  TestProgram.cpp  TestProgram.h  TestProperty.h  TestSuite.cpp  TestSuite.h
src/Services/: IServicesFactory.h  ServicesFactory.cpp  ServicesFactory.h
src/Services/EventHandlers/: ITestCaseEndEventHandler.h  ITestCaseStartEventHandler.h  ITestProgramEndEventHandler.h  ITestProgramStartEventHandler.h  ITestStepEndEventHandler.h  ITestStepStartEventHandler.h  ITestSuiteEndEventHandler.h  ITestSuiteStartEventHandler.h  TestCaseEndEventHandler.cpp  TestCaseEndEventHandler.h  TestCaseStartEventHandler.cpp  TestCaseStartEventHandler.h  TestProgramEndEventHandler.cpp  TestProgramEndEventHandler.h  TestProgramStartEventHandler.cpp  TestProgramStartEventHandler.h  TestStepEndEventHandler.cpp  TestStepEndEventHandler.h  TestStepStartEventHandler.cpp  TestStepStartEventHandler.h  TestSuiteEndEventHandler.cpp  TestSuiteEndEventHandler.h  TestSuiteStartEventHandler.cpp  TestSuiteStartEventHandler.h
src/Services/GoogleTest/: GTestEventListener.cpp  GTestEventListener.h  GTestStatusChecker.cpp  GTestStatusChecker.h  IGTestStatusChecker.h
src/Services/Property/: ITestCasePropertySetter.h  ITestSuitePropertySetter.h  TestCasePropertySetter.cpp  TestCasePropertySetter.h  TestSuitePropertySetter.cpp  TestSuitePropertySetter.h
src/Services/Report/: ContainerJSONSerializer.cpp  ContainerJSONSerializer.h  IContainerJSONSerializer.h  ITestCaseJSONSerializer.h  ITestProgramJSONBuilder.h  ITestSuiteJSONSerializer.h  TestCaseJSONSerializer.cpp  TestCaseJSONSerializer.h  TestProgramJSONBuilder.cpp  TestProgramJSONBuilder.h  TestSuiteJSONSerializer.cpp  TestSuiteJSONSerializer.h
src/Services/System/: FileService.cpp  FileService.h  IFileService.h  ITimeService.h  IUUIDGeneratorService.h  TimeService.cpp  TimeService.h  UUIDGeneratorService.cpp  UUIDGeneratorService.h
test/docs-snippets/: CMakeLists.txt  CppUTestCustomOutput.cpp  CppUTestExamples.cpp  CppUTestSetup.cpp  GoogleTestEnvironment.cpp  GoogleTestExamples.cpp  GoogleTestLanding.cpp  GoogleTestSetup.cpp  README.md
(+385 files in other folders)
